--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "path": "^0.12.7"
   },
   "scripts": {
-    "serve": "node server.js"
+    "start": "node server.js"
   },
   "eslintConfig": {
     "extends": [
